--- a/src/public/css/layouts/default.css
+++ b/src/public/css/layouts/default.css
@@ -1,5 +1,17 @@
-.header{
+body {
+    margin: 0;
+}
 
+.main{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header{
+    background-color: #000000;
+    height: 56px;
+    display: flex;
+    align-items: center;
 }
 
 .header__logo{
@@ -11,5 +23,7 @@
 }
 
 .header__logo-img{
-    
+    width: 240px;
+    height: auto;
+    margin-left: 24px;
 }
