--- a/src/public/css/layouts/app.css
+++ b/src/public/css/layouts/app.css
@@ -1,5 +1,7 @@
 .header-nav{
-
+    display: flex;
+    align-items: center;
+    margin-right: 24px;
 }
 
 .header-nav__search{
@@ -15,9 +17,28 @@
 }
 
 .header-nav__link{
-
+    display: flex;
+    gap: 16px;
+    list-style: none;
 }
 
 a{
+    display: inline-block;
+    display: inline-block;
+    text-align: center;
+}
 
+.header-nav__link-logout,
+.header-nav__link-mypage{
+    color: #FFFFFF !important;
+    text-decoration: none;
+    width: 80px;
+}
+
+.header-nav__link-sell{
+    text-decoration: none;
+    background-color: #FFFFFF;
+    color: #000000;
+    width: 56px;
+    border-radius: 3px;
 }
