--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -76,9 +76,18 @@
     font-size: 16px;
 }
 
+.form__button-submit:hover {
+  transform: translateY(-5px);
+}
+
 .content__link-register{
     color: #0073CC;
     text-decoration: none;
     font-size: 14px;
     margin-bottom: 16px;
 }
+
+.content__link-register:hover {
+  transform: translateY(-5px);
+}
+
