--- a/src/public/css/auth/register.css
+++ b/src/public/css/auth/register.css
@@ -76,9 +76,17 @@
     font-size: 16px;
 }
 
+.form__button-submit:hover {
+  transform: translateY(-5px);
+}
+
 .content__link-login{
     color: #0073CC;
     text-decoration: none;
     font-size: 14px;    
     margin-bottom: 16px;
+}
+
+.content__link-login:hover {
+  transform: translateY(-5px);
 }
