--- a/src/public/css/layouts/app.css
+++ b/src/public/css/layouts/app.css
@@ -1,30 +1,31 @@
-.header-nav{
-    display: flex;
-    align-items: center;
-    margin-right: 24px;
-}
+
 
 .header-nav__search{
     height: 32px;
-
+    display: flex;
+    align-items: center;
 }
 
-.form{
-
+.form-search{
+    flex: 1;
 }
 
 .form__input-search{
     height: 32px;
-    width: 400px;
+    width: 480px;
     box-sizing: border-box;
     font-size: 14px;
 }
 
 .header-nav__link{
+    margin-right: 24px;
+}
+
+.header-nav__link-list{
     display: flex;
     gap: 16px;
     list-style: none;
-    margin: 0;
+    padding: 0;
     align-items: center;
     height: 32px;
 }
