--- a/src/public/css/public/index.css
+++ b/src/public/css/public/index.css
@@ -24,6 +24,7 @@
     margin-right: 56px;
     font-size: 16px;
     font-weight: bold;
+    color: #5F5F5F;
 }
 
 .tab__content{
@@ -38,6 +39,11 @@
     display: flex;
     flex-direction: column;
     margin: 32px;
+}
+
+.item-link{
+    display: block;
+    height: auto;
 }
 
 .tab__content img{
