--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -10,7 +10,7 @@
 }
 
 .content{
-    margin: 16px 0 auto;
+    margin: 24px 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,26 +20,19 @@
     width: 480px;
 }
 
+fieldset{
+    border: none;
+}
+
 .form-group{
-    margin-bottom: 16px;
+    margin-bottom: 32px;
 }
 
-.form-group__title{
-
-}
 
 .form__label--item{
     font-size: 16px;
     font-weight: bold;
     margin: 8px 0;
-}
-
-.form-group__content{
-
-}
-
-.form__input-text{
-
 }
 
 .form__input{
