--- a/src/public/css/layouts/default.css
+++ b/src/public/css/layouts/default.css
@@ -26,3 +26,13 @@ body {
 .header__logo-img{
     width: 240px;
 }
+
+fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  min-inline-size: auto;
+  box-sizing: border-box;
+  display: block;
+}
