--- a/src/public/css/auth/order/purchase.css
+++ b/src/public/css/auth/order/purchase.css
@@ -1,61 +1,145 @@
 .content {
-  margin: 48px;
+    margin: 48px;
 }
 
 .form {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 .form__left {
-  padding-right: 48px;
+    padding-right: 48px;
 }
 
-.form-group {
-  display: flex;
-  border-bottom: 1px solid #000000;
+.form-group__item {
+    display: flex;
+    border-bottom: 1px solid #000000;
+    padding-bottom: 48px;
+}
+select#payment {
+    margin: 32px;
+    height: 32px;
+    width: 340px;
+}
+
+.form-group__payment {
+    border-bottom: 1px solid #000000;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group__item {
+    border-bottom: 1px solid #000000;
 }
 
 .item__img {
-  width: 160px;
-  height: 160px;
+    width: 240px;
+    height: 240px;
+    margin-right: 42px;
 }
 
-.item__price-label {}
-
-.item-price {}
-
-.form__label--item {}
-
-option{
-  background-color: #636769;
+.item__price-label {
+    font-size: 16px;
+    margin: 24px 0;
 }
 
-.form__right {}
+.item-price {
+    font-size: 24px;
+}
+
+.item-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.form__label--item-name {
+    font-weight: bold;
+    font-size: 24px;
+    margin: 0;
+}
+.form__label--title {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+option {
+    background-color: #636769;
+}
+
+section.form-group__address {
+    margin: 32px;
+    justify-content: space-between;
+}
+
+p.form__label {
+    display: flex;
+    justify-content: space-between;
+}
+.form-group__content {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 0 56px;
+}
+
+.address-change__link {
+    color: #0073cc;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+p.postcode {
+    margin: 8px 0;
+}
+
+p.address {
+    margin: 16px 0;
+}
+
+.form__right {
+}
 
 .form-group__table {
-  border: 1px solid #000000;
+    width: 100%;
+    font-size: 20px;
+    border-collapse: collapse;
 }
 
-tr {}
+tr {
+    height: 100px;
+}
 
-th {}
+th {
+        border: 1px solid #000000;
+    border-right: none;
+    font-weight: normal;
+}
 
-td {}
+td {
+        border: 1px solid #000000;
+    border-left: none;
+    text-align: center;
+}
 
-.form__button {}
+.item-price{
+        font-size: 24px;
+}
+
+.form__button {
+        margin-top: 48px;
+}
 
 .form__button-submit {
-  width: 100%;
-  height: 40px;
-  border-radius: 3px;
-  background-color: #FF5555;
-  color: #FFFFFF;
-  font-weight: bold;
-  border: none;
-  font-size: 16px;
+    width: 100%;
+    height: 40px;
+    border-radius: 3px;
+    background-color: #ff5555;
+    color: #ffffff;
+    font-weight: bold;
+    border: none;
+    font-size: 16px;
 }
 
 .form__button-submit:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
