--- a/src/public/css/layouts/app.css
+++ b/src/public/css/layouts/app.css
@@ -1,27 +1,25 @@
-
-
-.header-nav__search{
+.header-nav__search {
     height: 32px;
     display: flex;
     align-items: center;
 }
 
-.form-search{
+.form-search {
     flex: 1;
 }
 
-.form__input-search{
+.form__input-search {
     height: 32px;
     width: 480px;
     box-sizing: border-box;
     font-size: 14px;
 }
 
-.header-nav__link{
+.header-nav__link {
     margin-right: 24px;
 }
 
-.header-nav__link-list{
+.header-nav__link-list {
     display: flex;
     gap: 16px;
     list-style: none;
@@ -30,24 +28,40 @@
     height: 32px;
 }
 
-a{
+a {
     display: inline-block;
     align-content: center;
     text-align: center;
     height: 32px;
 }
 
-.header-nav__link-logout,
-.header-nav__link-mypage{
-    color: #FFFFFF;
+.header-nav__link-mypage {
+    color: #ffffff;
+    font-size: 16px;
     text-decoration: none;
     width: 80px;
 }
 
-.header-nav__link-sell{
+button.header-nav__link-logout {
+    font-size: 16px;
     text-decoration: none;
-    background-color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+}
+
+.header-nav__link-login {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+}
+.header-nav__link-sell {
+    text-decoration: none;
+    background-color: #ffffff;
     color: #000000;
     width: 56px;
+    font-size: 16px;
     border-radius: 3px;
 }
