--- a/src/public/css/layouts/app.css
+++ b/src/public/css/layouts/app.css
@@ -68,3 +68,33 @@ button.header-nav__link-logout {
     font-size: 16px;
     border-radius: 3px;
 }
+
+
+.tab__content-item{
+    display: flex;
+    flex-direction: column;
+    margin: 32px;
+}
+
+.item-link{
+    display: block;
+    height: auto;
+}
+
+.tab__content img{
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 2px;
+}
+
+.tab__content img:hover {
+    cursor: pointer;
+    transform: translateY(-5px);
+}
+
+.item-name{
+    text-align: left;
+    font-size: 16px;
+    margin: 4px 0;
+}
