--- a/src/public/css/auth/edit.css
+++ b/src/public/css/auth/edit.css
@@ -1,57 +1,56 @@
-.title{
+.title {
     text-align: center;
     margin-top: 32px;
 }
 
-.title__label{
+.title__label {
     font-size: 24px;
     font-weight: bold;
     margin: 0;
 }
 
-.content{
+.content {
     margin: 32px 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form{
+.form {
     width: 480px;
 }
 
-.form-group__avatar{
-    height: 100px;
-    width: 100px;
+.form-group__avatar {
     display: flex;
     align-items: center;
     margin-bottom: 24px;
 }
 
-.img__avatar{
-    height: 100%;
-    width: 100%;
+.image--avatar {
+    height: 100px;
+    width: 100px;
     border-radius: 50%;
 }
 
-.form__button-upload{
-    color: #FF5555;
-    border: 2px solid #FF5555;
+.form__button-upload {
+    color: #ff5555;
+    border: 2px solid #ff5555;
     padding: 8px;
     border-radius: 8px;
     cursor: pointer;
-    white-space: nowrap; 
+    white-space: nowrap;
     margin-left: 32px;
     width: 100px;
     font-size: 12px;
     font-weight: bold;
+    text-align: center;
 }
 
 .form__button-upload:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 
-.form__input-img{
+.form__input-img {
     position: absolute;
     opacity: 0;
     width: 1px;
@@ -59,57 +58,48 @@
     pointer-events: none;
 }
 
-.form-group{
+.form-group {
     margin-bottom: 24px;
 }
 
-.form-group__title{
-
+.form-group__title {
 }
 
-.form__label--item{
+.form__label--item {
     font-size: 16px;
     font-weight: bold;
     margin: 8px 0;
 }
 
-.form-group__content{
-
+.form-group__content {
 }
 
-.form__input-text{
-
+.form__input-text {
 }
 
-.form__input{
+.form__input {
     height: 40px;
     width: 100%;
     box-sizing: border-box;
     font-size: 14px;
 }
 
-.form__input.is-invalid{
+.form__input.is-invalid {
     border: 2px solid #e63946;
     background-color: #ffe5e5;
     border-radius: 3px;
 }
 
-.error-message{
-    color: #D32F2F;
-    font-size: 12px;
-    margin: 8px 0;
-}
-
-.form__button{
+.form__button {
     padding: 24px 0 64px;
 }
 
-.form__button-submit{
+.form__button-submit {
     width: 100%;
     height: 40px;
     border-radius: 3px;
-    background-color: #FF5555;
-    color: #FFFFFF;
+    background-color: #ff5555;
+    color: #ffffff;
     font-weight: bold;
     border: none;
     font-size: 16px;
@@ -117,5 +107,5 @@
 }
 
 .form__button-submit:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
