--- a/src/public/css/public/exhibition.css
+++ b/src/public/css/public/exhibition.css
@@ -13,7 +13,7 @@
     overflow: hidden;
 }
 
-.img__item {
+.image--items  {
     width: 90%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
@@ -78,7 +78,7 @@ img.comment-icon {
 }
 
 .star{
-    filter: grayscale(100%) brightness(0.8); 
+    filter: grayscale(100%) brightness(0.8);
     transition: filter 0.3s ease;
 }
 
@@ -177,7 +177,7 @@ dd {
     margin: 0;
 }
 
-img.comment-avatar {
+.image--avatar  {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -189,7 +189,6 @@ img.comment-avatar {
     align-items: center;
 }
 
-        
 .user-name{
     font-weight: bold;
     margin-left: 16px;
