--- a/src/public/css/layouts/app.css
+++ b/src/public/css/layouts/app.css
@@ -79,11 +79,32 @@ button.header-nav__link-logout {
     height: auto;
 }
 
+.item-image-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
 .tab__content img {
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 2px;
+}
+
+.sold-overlay {
+    position: absolute;
+    top: 12px;
+    left: -40px;
+    background-color: #e60023;
+    color: #fff;
+    font-weight: bold;
+    font-size: 13px;
+    padding: 4px 50px;
+    text-align: center;
+    transform: rotate(-45deg);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+    z-index: 10;
 }
 
 .tab__content img:hover {
@@ -96,5 +117,3 @@ button.header-nav__link-logout {
     font-size: 16px;
     margin: 4px 0;
 }
-
-
