--- a/src/public/css/auth/verification-success.css
+++ b/src/public/css/auth/verification-success.css
@@ -34,3 +34,13 @@ h2{
 .form__button-submit:hover {
     transform: translateY(-5px);
 }
+
+@media (max-width: 850px) {
+    h2{
+        font-size: 24px;
+    }
+
+    .message{
+        font-size: 18px;
+    }
+}
