--- a/src/public/css/layouts/default.css
+++ b/src/public/css/layouts/default.css
@@ -1,18 +1,21 @@
 body {
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    font-family: "Inter", sans-serif;
 }
 
 main {
+    height: calc(100vh - 64px);
     max-width: 1540px;
     min-width: 1400px;
-    margin: 0 auto;
 }
 
 .header {
     background-color: #000000;
-    height: 64px;
     display: flex;
+    height: 64px;
     align-items: center;
     justify-content: space-between;
 }
@@ -35,14 +38,33 @@ fieldset {
     display: block;
 }
 
-.error-message{
-    color: #D32F2F;
+.error-message {
+    color: #d32f2f;
     font-size: 12px;
     margin: 8px 0;
 }
 
-.form__input.is-invalid{
+.form__input.is-invalid {
     border: 2px solid #e63946;
     background-color: #ffe5e5;
     border-radius: 3px;
+}
+
+@media (max-width: 850px) {
+    main {
+        min-width: auto;
+        width: 100%;
+    }
+
+    .header {
+        height: 48px;
+    }
+
+    .header__logo-img {
+        width: 180px;
+    }
+
+    .header__logo {
+        margin-left: 24px;
+    }
 }
