--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -1,74 +1,72 @@
-.title{
+.title {
     text-align: center;
     margin-top: 48px;
 }
 
-.title__label{
+.title__label {
     font-size: 24px;
     font-weight: bold;
     margin: 0;
 }
 
-.content{
+.content {
     margin: 24px 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form{
+.form {
     width: 480px;
 }
 
-fieldset{
+fieldset {
     border: none;
 }
 
-.form-group{
+.form-group {
     margin-bottom: 32px;
 }
 
-
-.form__label--item{
+.form__label--item {
     font-size: 16px;
     font-weight: bold;
     margin: 8px 0;
 }
 
-.form__input{
+.form__input {
     height: 40px;
     width: 100%;
     box-sizing: border-box;
     font-size: 14px;
 }
 
-.form__button{
+.form__button {
     padding: 24px 0;
 }
 
-.form__button-submit{
+.form__button-submit {
     width: 100%;
     height: 40px;
     border-radius: 3px;
-    background-color: #FF5555;
-    color: #FFFFFF;
+    background-color: #ff5555;
+    color: #ffffff;
     font-weight: bold;
     border: none;
     font-size: 16px;
 }
 
 .form__button-submit:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 
-.content__link-register{
-    color: #0073CC;
+.content__link-register {
+    color: #0073cc;
     text-decoration: none;
     font-size: 16px;
     margin-bottom: 16px;
 }
 
 .content__link-register:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
-
