--- a/src/public/css/auth/order/address.css
+++ b/src/public/css/auth/order/address.css
@@ -1,69 +1,58 @@
-.title{
+.title {
     text-align: center;
     margin-top: 32px;
 }
 
-.title__label{
+.title__label {
     font-size: 24px;
     font-weight: bold;
     margin: 0;
 }
 
-.content{
+.content {
     margin: 32px 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form{
+.form {
     width: 480px;
 }
 
-.form-group{
+.form-group {
     margin-bottom: 24px;
 }
 
-.form-group__title{
 
-}
-
-.form__label--item{
+.form__label--item {
     font-size: 16px;
     font-weight: bold;
     margin: 8px 0;
 }
 
-.form-group__content{
-
-}
-
-.form-group__input-text{
-
-}
-
-.form__input{
+.form__input {
     height: 40px;
     width: 100%;
     box-sizing: border-box;
     font-size: 14px;
 }
-.form__input.is-invalid{
+.form__input.is-invalid {
     border: 2px solid #e63946;
     background-color: #ffe5e5;
     border-radius: 3px;
 }
 
-.form__button{
+.form__button {
     padding: 24px 0 64px;
 }
 
-.form__button-submit{
+.form__button-submit {
     width: 100%;
     height: 40px;
     border-radius: 3px;
-    background-color: #FF5555;
-    color: #FFFFFF;
+    background-color: #ff5555;
+    color: #ffffff;
     font-weight: bold;
     border: none;
     font-size: 16px;
@@ -71,5 +60,5 @@
 }
 
 .form__button-submit:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
