--- a/src/public/css/auth/message.css
+++ b/src/public/css/auth/message.css
@@ -162,6 +162,9 @@
     padding: 8px;
     width: 600px;
     margin: 8px 0;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: pre-wrap;
 }
 
 .chat-img {
